# WIZnet-PICO-C

./: Blueboxreview.md  CLAUDE.md  CMakeLists.txt  Debug.md
examples/: CMakeLists.txt
examples/bluebox/: CMakeLists.txt  bluebox.c  config.c  config.h  debug.c  debug.h  ds18b20.c  ds18b20.h  globals.h  hardware.h  led_state.c  led_state.h  mac.c  mac.h  main.c  network.c  network.h
examples/can/can_web_config/src/: canHandler.c  can_to_eth.c
port/: CMakeLists.txt  board_list.h
port/ioLibrary_Driver/inc/: wizchip_spi.h
